--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^3.4.0"
+    "craftcms/cms": "^3.4.0",
+    "php": ">=7.4.0"
   },
   "autoload": {
     "psr-4": {
