--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "wrux/blocky",
   "description": "Map a matrix field into an array of blocks to render in twig.",
   "type": "craft-plugin",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "keywords": [
     "craft",
     "cms",
@@ -22,8 +22,7 @@
     }
   ],
   "require": {
-    "craftcms/cms": "^3.4.0",
-    "php": ">=7.4.0"
+    "craftcms/cms": "^3.4.0"
   },
   "autoload": {
     "psr-4": {
