--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,3 +3,8 @@ plugins:
     enabled: true
     config:
         standard: "MEQP2"
+  phpmd:
+    enabled: true
+    config:
+      file_extensions: 
+        - php
