--- a/.github/workflows/php-review.yml
+++ b/.github/workflows/php-review.yml
@@ -1,22 +1,27 @@
-name: PHP Composer
+name: Code Review
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: pull_request
 
 jobs:
-  build:
 
+  phpcs:
+    name: PHPCS
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: PHPCS
+      uses: docker://oskarstark/phpcs-ga
+      with:
+        args: --standard=phpcs.xml.dist src
 
+  phpstan:
+    name: PHPStan
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
       run: composer validate
-      
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
@@ -25,13 +30,14 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-node-
-
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
+    - name: Create temporary storage directory
+      run: mkdir storage
 
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: PHPStan
+      uses: docker://oskarstark/phpstan-ga
+      with:
+        args: analyse src/ --level=5
