--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Lint Code Base
         uses: docker://github/super-linter:v2.1.1
         env:
+          DEFAULT_BRANCH: 'main'
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_ANSIBLE: false
           VALIDATE_MD: true
