--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "wrux/blocky",
   "description": "Map a matrix field into an array of blocks to render in twig.",
   "type": "craft-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "craft",
     "cms",
@@ -25,8 +25,7 @@
     "phpstan": "vendor/bin/phpstan analyse ./src --level=5"
   },
   "require": {
-    "craftcms/cms": "^3.4.0",
-    "php": ">=7.4.0"
+    "craftcms/cms": "^3.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -44,5 +43,10 @@
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12.29"
+  },
+  "config": {
+    "platform": {
+      "php": "7.4.0"
+    }
   }
 }
